# Axelte

./: LICENSE
back-end/: .gitignore  Cargo.toml
back-end/schema/: schema.sql
back-end/src/: main.rs
back-end/src/handlers/: auth_handlers.rs  body_handlers.rs  jwt.rs  mod.rs
back-end/src/models/: user.rs
back-end/src/routes/: auth.rs  body.rs
front-end/: package-lock.json  package.json
front-end/src/routes/: +layout.svelte  +page.svelte
frontend/: README.md  package-lock.json  package.json
frontend/.github/workflows/: deploy.yml
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/components/: Benefits.svelte  Community.svelte  Contact.svelte  Editor.svelte  FAQ.svelte  Features.svelte  Footer.svelte  Hero.svelte  HowItWorks.svelte  NavUser.svelte  Navbar.svelte  Pricing.svelte  Services.svelte  Sponsors.svelte  Teams.svelte  Testimonials.svelte  ToggleTheme.svelte
frontend/src/lib/config/: meta.ts
frontend/src/lib/server/: auth.ts
frontend/src/lib/stores/: awareness.ts  pages.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte
frontend/src/routes/(app)/: +layout.server.ts  +page.server.ts  +page.svelte
frontend/src/routes/(app)/me/: +page.svelte
frontend/src/routes/(auth)/: +layout.server.ts
src/lib/components/: AvatarUser.svelte  Editor.svelte  MainNavbar.svelte  NavUser.svelte
src/lib/config/: meta.ts
src/lib/server/: auth.ts
src/lib/utils/: prosemirror.ts
src/routes/: +layout.svelte
src/routes/(app)/: +page.svelte
src/routes/(auth)/login/: +page.svelte
(+22 files in other folders)
