[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["mysql", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4"] }


